2008-01-18  Sebastien Pouliot  <sebastien@ximian.com>

	* EnsureSymmetryForOverloadedOperatorsTest.cs: New. Unit tests by 
	Andreas Noever
	* OperatorEqualsShouldBeOverloadedTest.cs: New. Unit tests by 
	Andreas Noever
	* OverrideEqualsMethodTest.cs: New. Unit tests by Andreas Noever
	* ProvideAlternativeNamesForOperatorOverloadsTest.cs: New. Unit 
	tests by Andreas Noever

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* FinalizersShouldBeProtectedTest.cs: New. Unit tests by Daniel 
	Abramov
	* FinalizersShouldCallBaseClassFinalizerTest.cs: New. Unit tests by 
	Daniel Abramov
	* Test.Rules.Design.mdp: Added new tests to MD project file.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* DisposableFieldsShouldBeDisposedTest.cs: Add test case for static 
	fields.
	* DisposableTypesShouldHaveFinalizerTest.cs: Add test case for 
	static fields.
	* TypesWithDisposableFieldsShouldBeDisposableTest.cs: Add test 
	cases for structs and static fields.
	* TypesWithNativeFieldsShouldBeDisposableTest.cs: Add test cases 
	for structs and static fields.

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs: New. Unit tests by 
	Andreas Noever.
	* DisposableTypesShouldHaveFinalizerTest.cs: New. Unit tests by 
	Andreas Noever.
	* TypesWithDisposableFieldsShouldBeDisposableTest.cs: New. Unit 
	tests by Andreas Noever.
	* TypesWithNativeFieldsShouldBeDisposableTest.cs: New. Unit 
	tests by Andreas Noever.
	* Test.Rules.Design.mdp: Added new tests to MD project file.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeArgumentsShouldHaveAccessorsTest.cs: New. Unit tests from
	Daniel Abramov.

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* MissingAttributeUsageOnCustomAttributeTest.cs: New. Unit tests 
	from Daniel Abramov.
	* Test.Rules.Design.mdp: Add new unit tests to MonoDevelop 
	project	file.

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>
